# rh

./: .README.md.swp  .gitignore  AXIEL_INTEGRATION.md  AXIEL_PASSPORT_ENGINE.md  CE1_Constellation_Map.md  CE1_SEED_BANK_REFERENCE.md  CE1_paper_outline.md  COLOR_QUATERNION_PHYSICS_SUMMARY.md  CONVOLUTION_PROOF_TRANSFORMATION.md  CONVOLUTION_TIME_SPRINGS_SUMMARY.md  CRITICAL_HAT_INSIGHT.md  CRITICAL_HAT_RIGOROUS_ANALYSIS.md  DAYS_OF_AXMAS_COMPLETE.md  DIMENSIONAL_OPENINGS_ANALYSIS.md  DONE_WHEN_CHECKLIST.md  EULER_PASCAL_BREAKTHROUGH.md  GOLDEN_RATIO_BASE12_DISCOVERY.md  LIVING_DOCUMENT_ATMOSPHERE_COMPLETE.md  LI_STIELTJES_SUMMARY.md  MISSING_LINKS_ANALYSIS.md  MODULAR_ORIGAMI_THEORY.md  MODULAR_PROTEIN_ARCHITECTURE.md  Makefile  NORMALIZATION_CONSTRAINT_INSIGHT.md  PARADIGM_SUMMARY.md  PROOF_SYNTHESIS.md  README.md  RIEMANN_HYPOTHESIS_PROOF_COMPLETE.md  RIEMANN_HYPOTHESIS_PROOF_FINAL.md  SIMPLIFIED_STRUCTURE_PROPOSAL.md  TORUS_MAP_VALIDATION_RESULTS.md  WORK_LOG_2025_10_01.md  ce1.py  ce1_boundary_primes.py  ce1_boundary_primes_equations.py  ce1_convolution.py  ce1_core.py  ce1_domains.py  ce1_framework.py  ce1_jets.py  (+38 more)
.working/: README.md  fix_imports.py  test_fix_imports.py  test_makefile  test_makefile_activation.py
core/: README.md  __init__.py  actual_rh_proof.py  advanced_convolution_springs.py  advanced_critical_hat.py  archimedean_bounds.py  bounds_verification.py  capture_detailed_output.py  ce1_simple_visualization.py  ce1_visualization.py  comprehensive_spring_rh_test.py  constructive_fixes_demo.py  convergence_analysis.py  convergence_fsa.py  (+37 more)
(+253 files in other folders)
